# noisebridge-nav

./: .gitignore  CHANGELOG  README.md  config.yaml  example.py
ros2_ws/src/apriltags/: CMakeLists.txt  package.xml
ros2_ws/src/apriltags/include/apriltags/: estimate_pose.hpp
ros2_ws/src/apriltags/src/: estimate_pose.cpp  estimate_pose_node.cpp  test_apriltags.cpp
ros2_ws/src/calibration/: CMakeLists.txt  package.xml
ros2_ws/src/calibration/src/: calibration_node.cpp
ros2_ws/src/listen/: CMakeLists.txt  package.xml
ros2_ws/src/listen/src/: listen_node.cpp
ros2_ws/src/os2d_detector/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/os2d_detector/os2d_detector/: detector_node.py
ros2_ws/src/os2d_detector/os2d_detector/os2d/: inference.py
